Fix padding on mobile for booking card

--- a/landing/static/landing/css/style.css
+++ b/landing/static/landing/css/style.css
@@ -254,8 +254,11 @@ p {
     }
 
     .glass-card {
-        padding: 0 !important; /* Evitar deformación de la imagen */
         border-radius: 20px;
+    }
+
+    #inicio .glass-card {
+        padding: 25px !important;
     }
 
     .card-text {
